--- a/ssh.cfg
+++ b/ssh.cfg
@@ -1,5 +1,5 @@
-Host workstation-dcca.rhpds.opentlc.com
- Hostname workstation-dcca.rhpds.opentlc.com
+Host workstation-0bad.rhpds.opentlc.com
+ Hostname workstation-0bad.rhpds.opentlc.com
  IdentityFile ~/.ssh/openstack.pem
  ForwardAgent yes
  User cloud-user
@@ -9,5 +9,5 @@ Host workstation-dcca.rhpds.opentlc.com
 Host 10.10.10.*
  User cloud-user
  IdentityFile ~/.ssh/openstack.pem
- ProxyCommand ssh -F ./ssh.cfg workstation-dcca.rhpds.opentlc.com -W %h:%p
+ ProxyCommand ssh -F ./ssh.cfg workstation-0bad.rhpds.opentlc.com -W %h:%p
  StrictHostKeyChecking no
